--- a/konjac_sponges/Properties/launchSettings.json
+++ b/konjac_sponges/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:1136",
-      "sslPort": 44300
+      //"sslPort": 44300
     }
   },
   "profiles": {
