--- a/konjac_sponges/appsettings.json
+++ b/konjac_sponges/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-konjac_sponges-DEFFE091-45EF-4BD6-B2AC-6E792F4B1DC0;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SpongeContext": "Server=(localdb)\\mssqllocaldb;Database=SpongeContext-1;Trusted_Connection=True;MultipleActiveResultSets=true",
     "konjac_spongesContext": "Server=(localdb)\\mssqllocaldb;Database=konjac_spongesContext-f20d8068-f557-48bd-93d6-cb894e185d39;Trusted_Connection=True;MultipleActiveResultSets=true"
+
   },
   "Logging": {
     "LogLevel": {
