commneted alll necessory codes and Readme updated. program run successfully without any error.

--- a/konjac_sponges/Properties/launchSettings.json
+++ b/konjac_sponges/Properties/launchSettings.json
@@ -4,6 +4,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:1136",
+      // commented sslPort below for web visibility
       //"sslPort": 44300
     }
   },
